package hirelah.logic.commands;

/**
 * Enum representing what information HireLah is supposed to display.
 */
public enum ToggleView {
    SESSION,
    INTERVIEW,
    INTERVIEWEE,
    BEST_INTERVIEWEE,
    ATTRIBUTE,
    METRIC,
    QUESTION,
    TRANSCRIPT,
    CLOSE_TRANSCRIPT,

}
